tests/test85.rael.exp
Error [tests/test85.rael:1:12]: Unsupported type for 'sizeof' operation
| log sizeof 123
|            ^
